--- a/docs/assets/css/ie9.css
+++ b/docs/assets/css/ie9.css
@@ -1,88 +1,50 @@
 /*
-	Hyperspace by HTML5 UP
+	Fractal by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Type */
+/* Spotlight */
 
-	h1.major:after {
-		background: #b74e91;
+	.spotlight .image {
+		width: 25%;
+		display: inline-block;
+		vertical-align: middle;
 	}
 
-/* Wrapper */
-
-	.wrapper.fullscreen {
-		min-height: 0;
-		padding-bottom: 6em;
-		padding-top: 6em;
+	.spotlight .content {
+		width: 65%;
+		display: inline-block;
+		vertical-align: middle;
 	}
 
-		body.is-ie .wrapper.fullscreen {
-			height: auto;
-		}
-
-/* Spotlights */
-
-	.spotlights > section {
-		padding-left: 20em;
-		position: relative;
-	}
-
-		.spotlights > section > .image {
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 20em;
-		}
-
-		.spotlights > section > .content {
-			width: 100%;
-		}
-
-/* Features */
-
-	.features:after {
-		clear: both;
+	.spotlight:after {
 		content: '';
 		display: block;
-	}
-
-	.features section {
-		float: left;
-	}
-
-/* Split */
-
-	.split:after {
 		clear: both;
-		content: '';
-		display: block;
 	}
 
-	.split > * {
-		float: left;
+	.spotlight:nth-child(2n) .image {
+		margin: 0 3em 0 0;
 	}
 
-/* Sidebar */
-
-	#sidebar nav a:after {
-		background-color: #b74e91;
+	.spotlight:nth-child(2n) .content {
+		text-align: left;
 	}
 
 /* Header */
 
-	#header:after {
-		clear: both;
-		content: '';
-		display: block;
+	#header {
+		height: auto;
+		text-align: center;
 	}
 
-	#header > .title {
-		float: left;
-	}
+		#header .content {
+			display: inline-block;
+			vertical-align: middle;
+		}
 
-	#header > nav {
-		float: right;
-	}
+		#header .image {
+			display: inline-block;
+			vertical-align: middle;
+		}
