--- a/docs/assets/sass/base/_typography.scss
+++ b/docs/assets/sass/base/_typography.scss
@@ -1,48 +1,61 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Hyperspace by HTML5 UP
+/// Fractal by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
 /* Type */
 
-	body, input, select, textarea {
+	html, body {
+		background: _palette(bg-alt);
+	}
+
+	body {
 		color: _palette(fg);
+	}
+
+	html, input, select, textarea {
+		font-size: 16pt;
+
+		// XLarge.
+			@include breakpoint(xlarge) {
+				font-size: 13pt;
+			}
+
+		// Large.
+			@include breakpoint(large) {
+				font-size: 12pt;
+			}
+
+		// XXSmall.
+			@include breakpoint(xxsmall) {
+				font-size: 11pt;
+			}
+
+	}
+
+	body, input, select, textarea {
 		font-family: _font(family);
-		font-size: 16.5pt;
 		font-weight: _font(weight);
-		line-height: 1.75;
-
-		@include breakpoint(xlarge) {
-			font-size: 13pt;
-		}
-
-		@include breakpoint(large) {
-			font-size: 12pt;
-		}
-
-		@include breakpoint(xxsmall) {
-			font-size: 11pt;
-		}
+		line-height: 1.5em;
+		letter-spacing: -0.015em;
 	}
 
 	a {
-		@include vendor('transition', (
-			'color #{_duration(transition)} ease',
-			'border-bottom-color #{_duration(transition)} ease'
-		));
-		border-bottom: dotted 1px _palette(fg-light);
-		color: inherit;
+		@include vendor('transition', ('color #{_duration(transition)} ease-in-out', 'border-bottom-color #{_duration(transition)} ease-in-out'));
 		text-decoration: none;
+		border-bottom: dotted 1px;
 
 		&:hover {
-			border-bottom-color: transparent;
-			color: _palette(fg-bold);
+			border-bottom-color: transparent !important;
 		}
 	}
 
 	strong, b {
-		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
 	}
 
@@ -55,84 +68,65 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: _palette(fg-bold);
-		font-weight: _font(weight-bold);
-		line-height: 1.5;
-		margin: 0 0 (_size(element-margin) * 0.25) 0;
+		font-weight: _font(weight);
+		line-height: 1em;
+		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		letter-spacing: -0.0125em;
 
 		a {
 			color: inherit;
 			text-decoration: none;
+			border-bottom: none;
 		}
-	}
 
-	h1 {
-		font-size: 2.75em;
-
-		&.major {
-			margin: 0 0 (_size(element-margin) * 0.65) 0;
-			position: relative;
-			padding-bottom: 0.35em;
-
-			&:after {
-				@include vendor('background-image', 'linear-gradient(to right, #{_palette(accent1)}, #{_palette(accent3)})');
-				@include vendor('transition', 'max-width #{_duration(transition)} ease');
-				border-radius: 0.2em;
-				bottom: 0;
-				content: '';
-				height: 0.05em;
-				position: absolute;
-				right: 0;
-				width: 100%;
+		// Medium.
+			@include breakpoint(medium) {
+				br {
+					display: none;
+				}
 			}
-		}
+
 	}
 
 	h2 {
 		font-size: 1.75em;
+		line-height: 1.5em;
 	}
 
 	h3 {
-		font-size: 1.1em;
+		font-size: 1.5em;
+		line-height: 1.5em;
 	}
 
 	h4 {
-		font-size: 1em;
+		font-size: 1.1em;
+		line-height: 1.5em;
 	}
 
 	h5 {
-		font-size: 0.8em;
+		font-size: 0.9em;
+		line-height: 1.5em;
 	}
 
 	h6 {
-		font-size: 0.6em;
+		font-size: 0.7em;
+		line-height: 1.5em;
 	}
 
-	@include breakpoint(small) {
-		h1 {
-			font-size: 2em;
-		}
+	// Small.
+		@include breakpoint(small) {
+			h2 {
+				font-size: 1.25em;
+			}
 
-		h2 {
-			font-size: 1.25em;
-		}
+			h3 {
+				font-size: 1.2em;
+			}
 
-		h3 {
-			font-size: 1em;
+			h4 {
+				font-size: 1em;
+			}
 		}
-
-		h4 {
-			font-size: 0.8em;
-		}
-
-		h5 {
-			font-size: 0.6em;
-		}
-
-		h6 {
-			font-size: 0.6em;
-		}
-	}
 
 	sub {
 		font-size: 0.8em;
@@ -147,16 +141,17 @@
 	}
 
 	blockquote {
-		border-left: solid (_size(border-width) * 4) _palette(border);
+		border-left-style: solid;
+		border-left-width: (_size(border-width) * 4);
 		font-style: italic;
 		margin: 0 0 _size(element-margin) 0;
 		padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4) _size(element-margin);
 	}
 
 	code {
-		background: _palette(border-bg);
 		border-radius: _size(border-radius);
-		border: solid _size(border-width) _palette(border);
+		border-style: solid;
+		border-width: _size(border-width);
 		font-family: _font(family-fixed);
 		font-size: 0.9em;
 		margin: 0 0.25em;
@@ -179,7 +174,8 @@
 
 	hr {
 		border: 0;
-		border-bottom: solid _size(border-width) _palette(border);
+		border-bottom-style: solid;
+		border-bottom-width: _size(border-width);
 		margin: _size(element-margin) 0;
 
 		&.major {
@@ -198,3 +194,51 @@
 	.align-right {
 		text-align: right;
 	}
+
+	@mixin color-typography($p: null) {
+		@if $p != null {
+			background-color: _palette($p, bg);
+			color: _palette($p, fg);
+		}
+
+		input, select, textarea {
+			color: _palette($p, fg);
+		}
+
+		a {
+			color: inherit;
+			border-bottom-color: _palette($p, border2);
+
+			@if _palette($p, invert) == true {
+				color: _palette($p, fg-bold);
+			}
+			@else {
+				&:hover {
+					color: _palette(accent1, bg);
+				}
+			}
+		}
+
+		strong, b {
+			color: _palette($p, fg-bold);
+		}
+
+		h1, h2, h3, h4, h5, h6 {
+			color: _palette($p, fg-bold);
+		}
+
+		blockquote {
+			border-left-color: _palette($p, border);
+		}
+
+		code {
+			background: _palette($p, border-bg);
+			border-color: _palette($p, border);
+		}
+
+		hr {
+			border-bottom-color: _palette($p, border);
+		}
+	}
+
+	@include color-typography;
