--- a/docs/assets/sass/components/_button.scss
+++ b/docs/assets/sass/components/_button.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Hyperspace by HTML5 UP
+/// Fractal by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -12,50 +16,24 @@
 	button,
 	.button {
 		@include vendor('appearance', 'none');
-		@include vendor('transition', (
-			'border-color #{_duration(transition)} ease'
-		));
-		background-color: transparent;
-		border: solid 1px !important;
-		border-color: _palette(border) !important;
-		border-radius: 3em;
-		color: _palette(fg-bold) !important;
+		@include vendor('transition', 'background-color #{_duration(transition)} ease-in-out, color #{_duration(transition)} ease-in-out');
+		border-radius: _size(border-radius);
+		border: 0;
 		cursor: pointer;
 		display: inline-block;
-		font-size: 0.6em;
 		font-weight: _font(weight-bold);
-		height: calc(4.75em + 2px);
-		letter-spacing: _font(kerning-alt);
-		line-height: 4.75em;
-		outline: 0;
-		padding: 0 3.75em;
-		position: relative;
+		height: 2.85em;
+		line-height: 2.95em;
+		padding: 0 1.75em;
 		text-align: center;
 		text-decoration: none;
-		text-transform: uppercase;
 		white-space: nowrap;
 
-		&:after {
-			@include vendor('transform', 'scale(0.25)');
-			@include vendor('pointer-events', 'none');
-			@include vendor('transition', (
-				'opacity #{_duration(transition)} ease',
-				'transform #{_duration(transition)} ease'
-			));
-			background: _palette(fg-bold);
-			border-radius: 3em;
-			content: '';
-			height: 100%;
-			left: 0;
-			opacity: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
-
 		&.icon {
+			padding-left: 1.35em;
+
 			&:before {
-				margin-right: 0.75em;
+				margin-right: 0.5em;
 			}
 		}
 
@@ -66,43 +44,77 @@
 		}
 
 		&.small {
-			font-size: 0.4em;
-		}
-
-		&.big {
 			font-size: 0.8em;
 		}
 
-		&.special {
-			background-color: _palette(fg-bold);
-			color: _palette(bg) !important;
-
-			&:after {
-				display: none;
-			}
+		&.big {
+			font-size: 1.35em;
 		}
 
 		&.disabled,
 		&:disabled {
-			cursor: default;
-			opacity: 0.5;
 			@include vendor('pointer-events', 'none');
+			cursor: default;
+			opacity: 0.25;
 		}
 
-		&:hover {
-			border-color: _palette(fg) !important;
+		// XSmall.
+			@include breakpoint(xsmall) {
 
-			&:after {
-				opacity: 0.05;
-				@include vendor('transform', 'scale(1)');
+				// Portrait.
+					@include orientation(portrait) {
+						padding: 0;
+					}
+
+			}
+
+	}
+
+	@mixin color-button($p: null) {
+		input[type="submit"],
+		input[type="reset"],
+		input[type="button"],
+		button,
+		.button {
+			background-color: transparent;
+			color: _palette($p, fg-bold) !important;
+			box-shadow: inset 0 0 0 (_size(border-width) * 2) _palette($p, border);
+
+			&:hover {
+				background-color: _palette($p, border-bg);
 			}
 
 			&:active {
-				border-color: _palette(fg-bold) !important;
+				background-color: _palette($p, border2-bg);
+			}
 
-				&:after {
-					opacity: 0.1;
+			&.special {
+				box-shadow: none;
+
+				@if _palette($p, invert) == true {
+					background-color: _palette($p, fg-bold);
+					color: _palette($p, bg) !important;
+
+					&:hover {
+					}
+
+					&:active {
+					}
+				}
+				@else {
+					background-color: _palette(accent1, bg);
+					color: _palette(accent1, fg-bold) !important;
+
+					&:hover {
+						background-color: lighten(_palette(accent1, bg), 5);
+					}
+
+					&:active {
+						background-color: darken(_palette(accent1, bg), 5);
+					}
 				}
 			}
 		}
 	}
+
+	@include color-button;
