--- a/docs/assets/sass/components/_list.scss
+++ b/docs/assets/sass/components/_list.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Hyperspace by HTML5 UP
+/// Fractal by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -30,7 +34,8 @@
 			padding-left: 0;
 
 			li {
-				border-top: solid _size(border-width) _palette(border);
+				border-top-style: solid;
+				border-top-width: _size(border-width);
 				padding: 0.5em 0;
 
 				&:first-child {
@@ -47,20 +52,104 @@
 
 			li {
 				display: inline-block;
-				padding: 0 0.75em 0 0;
+				padding: 0 1.5em 0 0;
 
 				&:last-child {
-					padding-right: 0;
+					padding-right: 0 !important;
 				}
 
-				> a, > span {
-					border: 0;
-					@include icon;
-
-					.label {
-						display: none;
+				.icon {
+					&:before {
+						font-size: 1.75rem;
 					}
 				}
+			}
+
+			&.major {
+				li {
+					padding: 0 2.5em 0 0;
+
+					.icon {
+						&:before {
+							font-size: 2.75rem;
+						}
+					}
+				}
+
+				// Small.
+					@include breakpoint(small) {
+						li {
+							padding: 0 1.25em 0 0;
+
+							.icon {
+								&:before {
+									font-size: 1.75rem;
+								}
+							}
+						}
+					}
+
+			}
+
+			&.labeled {
+				li {
+					margin: 1em 0;
+					padding: 0 2em 0 0;
+
+					.icon {
+						&:before {
+							vertical-align: middle;
+							font-size: 2.25rem;
+							margin-right: 0.5em;
+						}
+
+						.label {
+							display: inline-block;
+							vertical-align: middle;
+							color: _palette(fg);
+						}
+					}
+				}
+
+				// Small.
+					@include breakpoint(small) {
+
+						// Portrait.
+							@include orientation(portrait) {
+								text-align: left;
+								margin-right: auto;
+								margin-left: auto;
+								display: inline-block;
+								white-space: nowrap;
+
+								li {
+									display: block;
+									padding: 0;
+									margin: 1.5em 0 0 0;
+
+									.icon {
+										&:before {
+											width: 1.5em;
+											display: block;
+											float: left;
+											margin-right: 0;
+										}
+
+										&:after {
+											content: '';
+											display: block;
+											clear: both;
+										}
+									}
+
+									&:first-child {
+										margin-top: 0;
+									}
+								}
+							}
+
+					}
+
 			}
 		}
 
@@ -136,88 +225,48 @@
 				}
 			}
 
-			@include breakpoint(xsmall) {
-				margin: 0 0 _size(element-margin) 0;
+			// XSmall.
+				@include breakpoint(xsmall) {
 
-				li {
-					padding: (_size(element-margin) * 0.5) 0 0 0;
-					display: block;
-					text-align: center;
-					width: 100%;
+					// Portrait.
+						@include orientation(portrait) {
+							margin: 0 0 _size(element-margin) 0;
 
-					> * {
-						width: 100%;
-						margin: 0 !important;
+							li {
+								padding: (_size(element-margin) * 0.5) 0 0 0;
+								display: block;
+								text-align: center;
+								width: 100%;
 
-						&.icon {
-							&:before {
-								margin-left: -2em;
+								&:first-child {
+									padding-top: 0;
+								}
+
+								> * {
+									width: 100%;
+									margin: 0 !important;
+
+									&.icon {
+										&:before {
+											margin-left: -2em;
+										}
+									}
+								}
+							}
+
+							&.small {
+								li {
+									padding: (_size(element-margin) * 0.25) 0 0 0;
+
+									&:first-child {
+										padding-top: 0;
+									}
+								}
 							}
 						}
-					}
 
-					.button {
-						padding: 0;
-					}
-
-					&:first-child {
-						padding-top: 0;
-					}
 				}
 
-				&.small {
-					li {
-						padding: (_size(element-margin) * 0.25) 0 0 0;
-
-						&:first-child {
-							padding-top: 0;
-						}
-					}
-				}
-			}
-		}
-
-		&.contact {
-			list-style: none;
-			padding: 0;
-
-			> li {
-				padding: 0;
-				margin: 1.5em 0 0 0;
-
-				&:first-child {
-					margin-top: 0;
-				}
-			}
-		}
-
-		&.menu {
-			list-style: none;
-			padding: 0;
-
-			> li {
-				border-left: solid 1px _palette(border);
-				display: inline-block;
-				line-height: 1;
-				margin-left: 1.5em;
-				padding: 0 0 0 1.5em;
-
-				&:first-child {
-					border-left: 0;
-					margin: 0;
-					padding-left: 0;
-				}
-			}
-
-			@include breakpoint(xsmall) {
-				> li {
-					border-left: 0;
-					display: block;
-					line-height: inherit;
-					margin: 0.5em 0 0 0;
-					padding-left: 0;
-				}
-			}
 		}
 	}
 
@@ -234,3 +283,15 @@
 			margin-left: _size(element-margin);
 		}
 	}
+
+	@mixin color-list($p: null) {
+		ul {
+			&.alt {
+				> li {
+					border-top-color: _palette($p, border);
+				}
+			}
+		}
+	}
+
+	@include color-list;
