--- a/docs/assets/sass/ie8.scss
+++ b/docs/assets/sass/ie8.scss
@@ -4,16 +4,10 @@
 @import 'libs/skel';
 
 /*
-	Hyperspace by HTML5 UP
+	Fractal by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-
-/* Type */
-
-	body, input, select, textarea {
-		color: _palette(fg-bold);
-	}
 
 /* Button */
 
@@ -23,37 +17,83 @@
 	button,
 	.button {
 		position: relative;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
+		border: solid (_size(border-width) * 2) _palette(border) !important;
 
-		&:after {
-			display: none;
+		&:hover {
+			border: solid (_size(border-width) * 2) _palette(border) !important;
+		}
+
+		&.special {
+			border: none !important;
+
+			&:hover {
+				border: none !important;
+			}
 		}
 	}
 
-/* Features */
+/* Image */
 
-	.features {
-		border: solid 1px;
-	}
+	.image {
+		-ms-behavior: url('assets/js/ie/PIE.htc');
 
-/* Form */
+		img {
+			position: relative;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
+		}
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	input[type="tel"],
-	select,
-	textarea {
-		background: transparent;
-		border: solid 1px;
-	}
-
-/* Split */
-
-	.split {
-		&.style1 {
-			> :first-child {
-				padding-right: 2em;
-				width: 70%;
+		&.phone {
+			&:before, &:after {
+				display: none;
 			}
+
+			.inner {
+				&:before, &:after {
+					display: none;
+				}
+			}
+		}
+	}
+
+/* List */
+
+	ul {
+		&.icons {
+			li {
+				padding: 0 0 0 1.5em;
+
+				&:first-child {
+					padding-left: 0 !important;
+				}
+
+				.icon {
+					&:before {
+						font-size: 24px;
+					}
+				}
+			}
+
+			&.major {
+				li {
+					padding: 0 0 0 2.5em;
+
+					.icon {
+						&:before {
+							font-size: 48px;
+						}
+					}
+				}
+			}
+		}
+	}
+
+/* Header */
+
+	#header {
+		min-height: 0;
+
+		.image {
+			margin: 0 0 (_size(element-margin)) 0;
 		}
 	}
