--- a/docs/assets/sass/ie9.scss
+++ b/docs/assets/sass/ie9.scss
@@ -4,92 +4,39 @@
 @import 'libs/skel';
 
 /*
-	Hyperspace by HTML5 UP
+	Fractal by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Type */
+/* Spotlight */
 
-	h1 {
-		&.major {
-			&:after {
-				background: _palette(accent3);
-			}
+	.spotlight {
+		.image {
+			width: 25%;
+			display: inline-block;
+			vertical-align: middle;
 		}
-	}
 
-/* Wrapper */
-
-	.wrapper {
-		&.fullscreen {
-			min-height: 0;
-			padding-bottom: 6em;
-			padding-top: 6em;
-
-			body.is-ie & {
-				height: auto;
-			}
+		.content {
+			width: 65%;
+			display: inline-block;
+			vertical-align: middle;
 		}
-	}
 
-/* Spotlights */
-
-	.spotlights {
-		> section {
-			padding-left: 20em;
-			position: relative;
-
-			> .image {
-				height: 100%;
-				left: 0;
-				position: absolute;
-				top: 0;
-				width: 20em;
-			}
-
-			> .content {
-				width: 100%;
-			}
-		}
-	}
-
-/* Features */
-
-	.features {
 		&:after {
-			clear: both;
 			content: '';
 			display: block;
-		}
-
-		section {
-			float: left;
-		}
-	}
-
-/* Split */
-
-	.split {
-		&:after {
 			clear: both;
-			content: '';
-			display: block;
 		}
 
-		> * {
-			float: left;
-		}
-	}
+		&:nth-child(2n) {
+			.image {
+				margin: 0 (_size(element-margin) * 1.5) 0 0;
+			}
 
-/* Sidebar */
-
-	#sidebar {
-		nav {
-			a {
-				&:after {
-					background-color: _palette(accent3);
-				}
+			.content {
+				text-align: left;
 			}
 		}
 	}
@@ -97,17 +44,16 @@
 /* Header */
 
 	#header {
-		&:after {
-			clear: both;
-			content: '';
-			display: block;
+		height: auto;
+		text-align: center;
+
+		.content {
+			display: inline-block;
+			vertical-align: middle;
 		}
 
-		> .title {
-			float: left;
-		}
-
-		> nav {
-			float: right;
+		.image {
+			display: inline-block;
+			vertical-align: middle;
 		}
 	}
