--- a/docs/assets/sass/layout/_footer.scss
+++ b/docs/assets/sass/layout/_footer.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Hyperspace by HTML5 UP
+/// Fractal by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -7,32 +11,37 @@
 /* Footer */
 
 	#footer {
-		#sidebar + #wrapper + & {
-			margin-left: _size(sidebar-width);
+		@include color-typography(accent3);
+		@include padding(4.5em, 0);
+		color: _palette(accent3, fg-light);
+		text-align: center;
 
-			@include breakpoint(large) {
-				margin-left: 0;
-			}
+		a {
+			color: inherit;
 		}
 
-		> .inner {
-			a {
-				border-bottom-color: _palette(border);
-
-				&:hover {
-					border-bottom-color: transparent;
-				}
-			}
-
-			.menu {
-				font-size: 0.8em;
-				color: _palette(border);
-			}
+		.copyright {
+			font-size: 0.8em;
 		}
 
-		#header + #wrapper + & {
-			> .inner {
-				margin: 0 auto;
+		// Medium.
+			@include breakpoint(medium) {
+				@include padding(4em, 4em);
 			}
-		}
+
+		// Small.
+			@include breakpoint(small) {
+
+				// Landscape.
+					@include orientation(landscape) {
+						@include padding(3em, 3em);
+					}
+
+				// Portrait.
+					@include orientation(portrait) {
+						@include padding(3em, 1.5em);
+					}
+
+			}
+
 	}
