--- a/docs/assets/sass/layout/_header.scss
+++ b/docs/assets/sass/layout/_header.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Hyperspace by HTML5 UP
+/// Fractal by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -7,86 +11,195 @@
 /* Header */
 
 	#header {
+		@include color(accent1);
+		@include padding(4.5em, 0);
+		@include vendor('align-items', 'center');
 		@include vendor('display', 'flex');
-		background-color: _palette(accent1);
-		cursor: default;
-		padding: 1.75em 2em;
+		@include vendor('justify-content', 'center');
+		background-image: url('images/overlay.png'), url('images/pattern-size1.svg');
+		background-position: top left, center center;
+		background-attachment: fixed, fixed;
+		background-size: auto, cover;
+		height: 100vh;
+		min-height: 35em;
 
-		> .title {
-			border: 0;
-			color: _palette(fg-bold);
-			display: block;
-			font-size: 1.25em;
+		h1 {
+			font-size: 3.25em;
 			font-weight: _font(weight-bold);
+			margin-bottom: _size(element-margin) * 0.25;
 		}
 
-		> nav {
-			@include vendor('flex', '1');
+		p {
+			font-size: 1.5em;
+			line-height: 1.35em;
+
+			br {
+				display: inline;
+			}
+		}
+
+		.content {
+			@include vendor('transition', ('opacity 0.5s ease', 'transform 1s ease'));
+			@include vendor('transform', 'translateX(0)');
+			opacity: 1;
 			text-align: right;
+			margin: (_size(element-margin) * -1.75) (_size(element-margin) * 2) 0 0;
 
-			> ul {
-				margin: 0;
-				padding: 0;
+			> :last-child {
+				margin-bottom: 0;
+			}
+		}
 
-				> li {
-					display: inline-block;
-					margin-left: 1.75em;
-					padding: 0;
-					vertical-align: middle;
+		.image {
+			@include vendor('transition', ('opacity 1s ease', 'transform 1s ease'));
+			@include vendor('transform', 'translateY(0)');
+			opacity: 1;
 
-					&:first-child {
-						margin-left: 0;
+			img {
+				@include vendor('transition', 'opacity 0.75s ease');
+				@include vendor('transition-delay', '0.75s');
+				opacity: 1;
+			}
+		}
+
+		// Large.
+			@include breakpoint(large) {
+				background-image: url('images/overlay.png'), url('images/pattern-size2.svg');
+			}
+
+		// Medium.
+			@include breakpoint(medium) {
+				height: auto;
+				min-height: 0;
+
+				.content {
+					margin: (_size(element-margin) * -1) (_size(element-margin) * 2) 0 0;
+				}
+
+				// Portrait.
+					@include orientation(portrait) {
+						@include padding(6em, 3em);
+						@include vendor('flex-direction', 'column-reverse');
+
+						.content {
+							display: block;
+							width: 100%;
+							text-align: center;
+							margin: 0 0 _size(element-margin) 0;
+						}
+
+						.image {
+							overflow: hidden;
+						}
 					}
 
-					a {
-						border: 0;
-						color: _palette(fg-light);
-						display: inline-block;
-						font-size: 0.6em;
-						font-weight: _font(weight-bold);
-						letter-spacing: _font(kerning-alt);
-						text-transform: uppercase;
+			}
 
-						&:hover {
-							color: _palette(fg);
+		// Small.
+			@include breakpoint(small) {
+				background-image: url('images/overlay.png'), url('images/pattern-size3.svg');
+
+				h1 {
+					font-size: 2em;
+				}
+
+				p {
+					font-size: 1em;
+					line-height: inherit;
+				}
+
+				// Landscape.
+					@include orientation(landscape) {
+						@include padding(2em, 2em);
+
+						.content {
+							margin: 0 _size(element-margin) _size(element-margin) 0;
 						}
 
-						&.active {
-							color: _palette(fg-bold);
+						.image {
+							font-size: 0.8em;
+							width: 15em;
+							max-width: 20vw;
+
+							.inner, &:before, &:after {
+								font-size: 0.8em;
+							}
 						}
+					}
+
+				// Portrait.
+					@include orientation(portrait) {
+						@include padding(3em, 1.5em);
+
+						.image {
+							font-size: 0.6em;
+							max-width: 60vw;
+						}
+					}
+
+			}
+
+		// XSmall.
+			@include breakpoint(xsmall) {
+
+				// Landscape.
+					@include orientation(landscape) {
+						@include padding(2em, 1.5em);
+
+						.image {
+							font-size: 0.7em;
+						}
+
+						.actions {
+							font-size: 0.8em;
+						}
+					}
+
+				// Portrait.
+					@include orientation(portrait) {
+						@include padding(2em, 1em);
+					}
+
+			}
+
+		// Mobile.
+			body.is-mobile & {
+				background-attachment: scroll, scroll;
+			}
+
+		// Loading.
+			body.is-loading & {
+				.content {
+					@include vendor('transform', 'translateX(2em)');
+					opacity: 0;
+				}
+
+				.image {
+					@include vendor('transform', 'translateY(4em)');
+					opacity: 0;
+
+					img {
+						opacity: 0;
 					}
 				}
-			}
-		}
 
-		@include breakpoint(small) {
-			padding: 1em 2em;
-		}
+				// Medium.
+					@include breakpoint(medium) {
 
-		@include breakpoint(xsmall) {
-			display: block;
-			padding: 0 2em;
-			text-align: left;
+						// Portrait.
+							@include orientation(portrait) {
+								.content {
+									@include vendor('transform', 'none');
+									opacity: 1;
+								}
 
-			.title {
-				font-size: 1.25em;
-				padding: 1em 0;
-			}
+								.image {
+									@include vendor('transform', 'translateY(2em)');
+								}
+							}
 
-			> nav {
-				border-top: solid 1px _palette(border);
-				text-align: inherit;
-
-				> ul {
-					> li {
-						margin-left: 1.5em;
-
-						a {
-							height: 6em;
-							line-height: 6em;
-						}
 					}
-				}
+
 			}
-		}
+
 	}
