--- a/docs/assets/sass/main.scss
+++ b/docs/assets/sass/main.scss
@@ -5,25 +5,35 @@
 @import 'font-awesome.min.css';
 
 /*
-	Hyperspace by HTML5 UP
+	Fractal by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 	@include skel-breakpoints((
-		xlarge: '(max-width: 1680px)',
-		large: '(max-width: 1280px)',
-		medium: '(max-width: 980px)',
-		small: '(max-width: 736px)',
-		xsmall: '(max-width: 480px)',
-		xxsmall: '(max-width: 360px)'
+		xlarge:		'(max-width: 1680px)',
+		large:		'(max-width: 1280px)',
+		medium:		'(max-width: 980px)',
+		small:		'(max-width: 736px)',
+		xsmall:		'(max-width: 480px)',
+		xxsmall:	'(max-width: 360px)'
 	));
 
 	@include skel-layout((
 		reset: 'full',
 		boxModel: 'border',
-		grid: ( gutters: 1.5em )
+		grid: (gutters: 1.5em)
 	));
+
+	@mixin color($p: null) {
+		@include color-button($p);
+		@include color-form($p);
+		@include color-icon($p);
+		@include color-image($p);
+		@include color-list($p);
+		@include color-table($p);
+		@include color-typography($p);
+	}
 
 // Base.
 
@@ -34,21 +44,17 @@
 
 	@import 'components/box';
 	@import 'components/button';
-	@import 'components/features';
 	@import 'components/form';
 	@import 'components/icon';
 	@import 'components/image';
 	@import 'components/list';
 	@import 'components/section';
-	@import 'components/split';
-	@import 'components/spotlights';
+	@import 'components/spotlight';
 	@import 'components/table';
 	@import 'components/wrapper';
 
 // Layout.
 
 	@import 'layout/header';
-	@import 'layout/wrapper';
+	@import 'layout/main';
 	@import 'layout/footer';
-	@import 'layout/sidebar';
-	@import 'layout/intro';
